# pythonMath

./: .gitignore  ACO.py  ACO2.py  SQL.md  base.md  pyproject.toml  test.py  test2.py  test22.py
Sets_andLogic/: 1.ipynb  2.ipynb
analytics/: num.ipynb  shell.ipynb
argo/: data_st.ipynb  sample_pandas.csv
blockchain/170/: snakecoin_block.py  snakecoin_blockchain_test.py  snakecoin_genesis.py  snakecoin_next_block.py  snakecoin_node_transaction.py
coq/: .deMorgan.aux  .deMorgan2.aux  .deMorgan3.aux  .deMorgan4.aux  deMorgan.glob  deMorgan.ipynb  deMorgan.v  deMorgan.vo  deMorgan2.glob  deMorgan2.v  deMorgan2.vo  deMorgan3.glob  deMorgan3.v  deMorgan3.vo  deMorgan4.glob  deMorgan4.v  deMorgan4.vo  hello.v  test.ipynb
crypt/: bcrypt.ipynb  binary.ipynb  cyber_security.py  pub_128.key  result.md  rsa.ipynb  secret_128.key
data/: jp_population.csv  us_population.csv
geometry/: 1.ipynb
graph/: 2.ipynb  3.ipynb  plot_properties.ipynb
linear_algebra/: 1.ipynb  2.ipynb
mat/: test.ipynb
notebook/: Chap2.ipynb  Chap6.ipynb  Chap7.ipynb  Chap7_appendix.ipynb  Chap8.ipynb  chap1.ipynb  chap3.ipynb  chap4.ipynb  chap5.ipynb
notebook/network/: telnet.ipynb  telnet_client.py  telnet_server.py
playroom/: README.md  about_class.ipynb  about_class_and_decorator.ipynb  ai.py  algor.ipynb  box_and_ball.py  box_and_ball2.py  data.txt  donuts.py  enum_howto.ipynb  functional_programming.ipynb  hash.ipynb  linear_search.ipynb  list_and_lambda.ipynb  list_dict_tuple.ipynb  misc.ipynb  poland.py  prime.py  prime_number.ipynb  random_search.ipynb  regular_expressions.ipynb  snippets.ipynb  sort.ipynb  stack_and_queue.ipynb  test.ipynb  test.py  test2.ipynb  test2.py  test3.py  test5.py
playroom/algo/: queue_1.py  stack_1.py
rocket/: sym.ipynb
various_generation/: audiobook.py  generator.ipynb  movie_info.ipynb
